--- a/package.json
+++ b/package.json
@@ -9,19 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@egoist/tailwindcss-icons": "^1.4.0",
+    "@iconify-json/mdi": "^1.1.55",
+    "@mantine/core": "^7.2.2",
+    "@mantine/dropzone": "^7.2.2",
+    "@mantine/hooks": "^7.2.2",
+    "@monaco-editor/react": "^4.6.0",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@tabler/icons-react": "^2.40.0",
+    "@types/react-redux": "^7.1.30",
+    "browserfs": "^1.4.3",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.0.3"
+    "react-draggable": "^4.4.6",
+    "react-redux": "^8.1.3"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.0.3"
+    "eslint-config-next": "14.0.3",
+    "postcss": "^8.4.31",
+    "postcss-preset-mantine": "^1.11.0",
+    "postcss-simple-vars": "^7.0.1",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
