feat: initial structure

--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@tabler/icons-react": "^2.40.0",
     "@types/react-redux": "^7.1.30",
     "browserfs": "^1.4.3",
+    "i": "^0.3.7",
     "next": "14.0.3",
+    "npm": "^10.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-draggable": "^4.4.6",
