--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@egoist/tailwindcss-icons": "^1.4.0",
     "@iconify-json/mdi": "^1.1.55",
     "@mantine/core": "^7.2.2",
+    "@mantine/dates": "^7.2.2",
     "@mantine/dropzone": "^7.2.2",
     "@mantine/hooks": "^7.2.2",
     "@mantine/tiptap": "^7.2.2",
