--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@egoist/tailwindcss-icons": "^1.4.0",
+    "@fortune-sheet/react": "^0.19.0",
     "@iconify-json/mdi": "^1.1.55",
     "@mantine/core": "^7.2.2",
     "@mantine/dates": "^7.2.2",
