feat: support to zip files

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "fs": "^0.0.1-security",
     "html-to-docx": "^1.8.0",
     "i": "^0.3.7",
+    "jszip": "^3.10.1",
     "lodash": "^4.17.21",
     "mammoth": "^1.6.0",
     "next": "14.0.3",
