--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react-redux": "^7.1.30",
     "@uiw/react-md-editor": "^3.25.6",
     "browserfs": "^1.4.3",
+    "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "html-to-docx": "^1.8.0",
     "i": "^0.3.7",
@@ -50,6 +51,7 @@
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/html-docx-js": "^0.3.4",
     "@types/node": "^20",
     "@types/react": "^18",
