--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@egoist/tailwindcss-icons": "^1.4.0",
     "@fortune-sheet/react": "^0.19.0",
     "@iconify-json/mdi": "^1.1.55",
+    "@mantine/carousel": "^7.2.2",
     "@mantine/core": "^7.2.2",
     "@mantine/dates": "^7.2.2",
     "@mantine/dropzone": "^7.2.2",
@@ -34,6 +35,7 @@
     "@types/react-redux": "^7.1.30",
     "@uiw/react-md-editor": "^3.25.6",
     "browserfs": "^1.4.3",
+    "embla-carousel-react": "^7.1.0",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
     "html-to-docx": "^1.8.0",
