--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@egoist/tailwindcss-icons": "^1.4.0",
+    "@foobar404/wave": "^2.0.4",
     "@fortune-sheet/react": "^0.19.0",
     "@iconify-json/mdi": "^1.1.55",
     "@mantine/carousel": "^7.2.2",
@@ -35,6 +36,7 @@
     "@types/react-redux": "^7.1.30",
     "@uiw/react-md-editor": "^3.25.6",
     "browserfs": "^1.4.3",
+    "d3": "^7.8.5",
     "embla-carousel-react": "^7.1.0",
     "file-saver": "^2.0.5",
     "fs": "^0.0.1-security",
@@ -53,6 +55,7 @@
     "react-redux": "^8.1.3"
   },
   "devDependencies": {
+    "@types/d3": "^7.4.3",
     "@types/file-saver": "^2.0.7",
     "@types/html-docx-js": "^0.3.4",
     "@types/node": "^20",
