fix: starting music librabry with playlist and otimized memory

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "html-to-docx": "^1.8.0",
     "i": "^0.3.7",
     "jszip": "^3.10.1",
+    "jszip-utils": "^0.1.0",
     "lodash": "^4.17.21",
     "mammoth": "^1.6.0",
     "next": "14.0.3",
