feat: data reader

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@egoist/tailwindcss-icons": "^1.4.0",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@foobar404/wave": "^2.0.4",
     "@fortune-sheet/react": "^0.19.0",
     "@iconify-json/mdi": "^1.1.55",
@@ -21,8 +23,10 @@
     "@mantine/notifications": "^7.3.1",
     "@mantine/tiptap": "^7.2.2",
     "@monaco-editor/react": "^4.6.0",
+    "@mui/material": "^5.14.20",
     "@reduxjs/toolkit": "^1.9.7",
     "@tabler/icons-react": "^2.41.0",
+    "@textea/json-viewer": "^3.2.3",
     "@tiptap/extension-color": "^2.1.12",
     "@tiptap/extension-highlight": "^2.1.12",
     "@tiptap/extension-link": "^2.1.12",
